--- a/index.html
+++ b/index.html
@@ -10,15 +10,16 @@
   <table cellspacing=20>
     <tr>
       <td><img src="linkedin profile pic.jpg" alt=""></td>
-      <td><h1>Julian Lasius</h1>
-       <p> <em>Agile Coach // Scrum Master (PSM1) /// facilitator @ <strong><a href="http://fableplus.com/">fableplus</strong> <a/>
+      <td>
+        <h1>Julian Lasius</h1>
+        <p> <em>Agile Coach // Scrum Master (PSM1) /// facilitator @ <strong><a href="http://fableplus.com/">fableplus</strong> <a />
 
-       </em> </p>
-       <p>I am a change management consultant, passionate about helping teams grow and reach their potential </p>
-</td>
+          </em> </p>
+        <p>I am a change management consultant, passionate about helping teams grow and reach their potential </p>
+      </td>
     </tr>
   </table>
-<hr>
+  <hr>
   <h3>Education</h3>
   <ul>
     <li>MLitt., University of St Andrews, UK </li>
@@ -63,34 +64,23 @@
   <td><table>
   <tbody>
       <tr>
-        <td>MS Teams</td>
-        <td>strong familiarity</td>
+        <td>Professional Scrum Master (PSM1)</td>
+        <td>⭐️⭐️⭐️⭐️⭐️</td>
       </tr>
   <td>JIRA</td>
-  <td>strong familiarity</td>
+  <td>⭐️⭐️⭐️⭐️</td>
       <tr>
       <td>English</td>
       <td>⭐️⭐️⭐️⭐️⭐️</td>
         </tr>
-        <td>German</td>
-        <td>⭐️⭐️⭐️⭐️⭐️</td>
-        <tr>
+          <tr>
           <td>French</td>
-          <td>⭐️⭐️⭐️⭐️</td>
-      <tr>
-      <td>Italian</td>
-      <td>⭐️⭐️⭐️</td>
+          <td>⭐️⭐️⭐️⭐️⭐️</td>
       <tr>
       <td>Persian</td>
       <td>⭐️⭐️⭐️</td>
       <tr>
-      <td>Bahasa</td>
-      <td>⭐️⭐️</td>
-      <tr>
       <td>Chinese</td>
-      <td>⭐️⭐️</td>
-      <tr>
-      <td>Japanese</td>
       <td>⭐️⭐️</td>
       </tr>
   </table>
@@ -99,30 +89,19 @@
   <tbody>
       <tr>
         <td>MS Teams</td>
-        <td>strong familiarity</td>
+        <td>⭐️⭐️⭐️⭐️⭐️</td>
+
       </tr>
-  <td>JIRA</td>
-  <td>strong familiarity</td>
+  <td>MS Office</td>
+  <td>⭐️⭐️⭐️⭐️</td>
       <tr>
-      <td>English</td>
-      <td>⭐️⭐️⭐️⭐️⭐️</td>
-        </tr>
         <td>German</td>
         <td>⭐️⭐️⭐️⭐️⭐️</td>
         <tr>
-          <td>French</td>
-          <td>⭐️⭐️⭐️⭐️</td>
-      <tr>
       <td>Italian</td>
       <td>⭐️⭐️⭐️</td>
       <tr>
-      <td>Persian</td>
-      <td>⭐️⭐️⭐️</td>
-      <tr>
       <td>Bahasa</td>
-      <td>⭐️⭐️</td>
-      <tr>
-      <td>Chinese</td>
       <td>⭐️⭐️</td>
       <tr>
       <td>Japanese</td>
@@ -140,8 +119,10 @@
 
 
   <hr>
-  <a href="hobbies.html">My hobbies</a>
-  <a href="contactme.html">Contact me</a>
+  <a href=" hobbies.html">My hobbies</a>
+      <a href="contactme.html">Contact me</a>
 </body>
 
 </html>
+
+<link rel="stylesheet" href="/css/master.css">
